# Employee_workflow

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/api/v1/endpoints/: auth.py  executions.py  workflows.py
app/auth/: deps.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  execution.py  user.py  workflow.py
app/repositories/: execution.py  user.py  workflow.py
app/schemas/: auth.py  execution.py  workflow.py
app/services/: auth.py  execution.py  workflow.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  start-api.sh  start-worker.sh
docs/: architecture.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260625_0001_initial_schema.py
scripts/: bootstrap.ps1
tests/: conftest.py  test_api.py
