[project]
name = "workflow-engine"
version = "0.1.0"
description = "Workflow automation engine with FastAPI, PostgreSQL, Redis, and Celery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
